Reto A y reto B